# invest_analytica

./: .replit  NETmetrics.html  OGZPYmetrics.html  RXRXmetrics.html  SGFYmetrics.html  Table.html  bot.py  config.py  dispatcher.py  filename.csv  filters.py  last_id.txt  main.py  pyproject.toml  stocksavailableME.html  tableAAPLmetrics.html  test.py  user_list.txt
companiesAvailable/: companyList.html
companyNews/: AAPLnews.html  GAZP.MEnews.html  SBER.MEnews.html
handlers/: personal_actions.py
metricsTables/: AAPLmetrics.html  PFE-RM.MEmetrics.html
stocksAvailable/: stocksavailableME.html
userOptions/: user_options1750352084.txt  user_options{"id": 1750352084, "is_bot": false, "first_name": "Антоха", "last_name": "🥶", "username": "werolltogether", "language_code": "en"}.txt
userOptions/1750352084/: user_tickers.txt
