[tool.poetry]
name = "investanalytica"
version = "0.1.0"
description = ""
authors = ["yusupovanton <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
finnhub-python = "^2.4.7"
aiogram = "^2.18"
dash = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
